--- a/package.json
+++ b/package.json
@@ -17,8 +17,15 @@
     "@sveltejs/adapter-cloudflare": "^4.4.0",
     "@sveltejs/kit": "^2.0.0",
     "@sveltejs/vite-plugin-svelte": "^3.0.0",
+    "autoprefixer": "^10.4.16",
+    "flowbite": "^2.3.0",
+    "flowbite-svelte": "^0.46.0",
+    "flowbite-svelte-icons": "^1.5.0",
+    "postcss": "^8.4.32",
+    "postcss-load-config": "^5.0.2",
     "svelte": "^4.2.7",
     "svelte-check": "^3.6.0",
+    "tailwindcss": "^3.3.6",
     "tslib": "^2.4.1",
     "typescript": "^5.0.0",
     "vite": "^5.0.3",
