--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@sveltejs/kit": "^2.0.0",
     "@sveltejs/vite-plugin-svelte": "^3.0.0",
     "autoprefixer": "^10.4.16",
+    "discord.js": "^14.14.1",
     "flowbite": "^2.3.0",
     "flowbite-svelte": "^0.46.0",
     "flowbite-svelte-icons": "^1.5.0",
@@ -26,6 +27,7 @@
     "svelte": "^4.2.7",
     "svelte-check": "^3.6.0",
     "tailwindcss": "^3.3.6",
+    "tailwindcss-3d": "^1.0.6",
     "tslib": "^2.4.1",
     "typescript": "^5.0.0",
     "vite": "^5.0.3",
