--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@sveltejs/kit": "^2.0.0",
     "@sveltejs/vite-plugin-svelte": "^3.0.0",
     "autoprefixer": "^10.4.16",
+    "cannon-es": "^0.20.0",
     "discord.js": "^14.14.1",
     "flowbite": "^2.3.0",
     "flowbite-svelte": "^0.46.0",
@@ -25,9 +26,12 @@
     "postcss": "^8.4.32",
     "postcss-load-config": "^5.0.2",
     "svelte": "^4.2.7",
+    "svelte-cannon": "^0.8.0",
     "svelte-check": "^3.6.0",
+    "svelte-cubed": "^0.2.1",
     "tailwindcss": "^3.3.6",
     "tailwindcss-3d": "^1.0.6",
+    "three": "^0.164.1",
     "tslib": "^2.4.1",
     "typescript": "^5.0.0",
     "vite": "^5.0.3",
