--- a/package.json
+++ b/package.json
@@ -12,30 +12,34 @@
     "build-cf-types": "wrangler types && move worker-configuration.d.ts src/"
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^4.20240405.0",
-    "@sveltejs/adapter-auto": "^3.0.0",
-    "@sveltejs/adapter-cloudflare": "^4.4.0",
-    "@sveltejs/kit": "^2.0.0",
-    "@sveltejs/vite-plugin-svelte": "^3.0.0",
-    "autoprefixer": "^10.4.16",
+    "@cloudflare/workers-types": "^4.20240909.0",
+    "@sveltejs/adapter-auto": "^3.2.4",
+    "@sveltejs/adapter-cloudflare": "^4.7.2",
+    "@sveltejs/kit": "^2.5.27",
+    "@sveltejs/vite-plugin-svelte": "^3.1.2",
+    "autoprefixer": "^10.4.20",
     "cannon-es": "^0.20.0",
-    "discord.js": "^14.14.1",
-    "flowbite": "^2.3.0",
+    "discord.js": "^14.16.2",
+    "flowbite": "^2.5.1",
     "flowbite-svelte": "^0.46.0",
     "flowbite-svelte-icons": "^1.5.0",
-    "postcss": "^8.4.32",
-    "postcss-load-config": "^5.0.2",
-    "svelte": "^4.2.7",
+    "postcss": "^8.4.47",
+    "postcss-load-config": "^6.0.1",
+    "svelte": "^4.2.19",
     "svelte-cannon": "^0.8.0",
-    "svelte-check": "^3.6.0",
+    "svelte-check": "^4.0.2",
     "svelte-cubed": "^0.2.1",
-    "tailwindcss": "^3.3.6",
-    "tailwindcss-3d": "^1.0.6",
-    "three": "^0.164.1",
-    "tslib": "^2.4.1",
-    "typescript": "^5.0.0",
-    "vite": "^5.0.3",
-    "wrangler": "^3.51.0"
+    "tailwindcss": "^3.4.11",
+    "tailwindcss-3d": "^1.0.7",
+    "three": "^0.168.0",
+    "tslib": "^2.7.0",
+    "typescript": "^5.6.2",
+    "vite": "^5.4.5",
+    "wrangler": "^3.78.2"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "tailwind-merge": "^2.5.2"
+  },
+  "packageManager": "yarn@1.22.22"
 }
