--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@cloudflare/workers-types": "^4.20240909.0",
     "@sveltejs/adapter-auto": "^3.2.4",
     "@sveltejs/adapter-cloudflare": "^4.7.2",
+    "@sveltejs/enhanced-img": "^0.3.8",
     "@sveltejs/kit": "^2.5.27",
     "@sveltejs/vite-plugin-svelte": "^3.1.2",
     "autoprefixer": "^10.4.20",
