Add Bluesky link

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,13 @@
 {
   "cSpell.words": [
+    "Bluesky",
     "flowbite",
     "GXYWHJEYCP",
     "Hackathon",
     "metadock",
     "pcss",
     "Reddisco",
-    "starspace"
+    "starspace",
+    "XURL"
   ]
 }
